--- a/resources/assets/styles/layouts/mini-cart.scss
+++ b/resources/assets/styles/layouts/mini-cart.scss
@@ -4,15 +4,11 @@
   background: color("light");
   position: fixed;
   height: 100vh;
-  right: -$gutter * 45;
+  right: -100%;
   top: 0;
   z-index: z-index("mini-cart");
   transition: $transition * 2;
   width: 100%;
-
-  @include media(md) {
-    width: auto;
-  }
 
   &::before {
     content: "";
@@ -40,6 +36,11 @@
     transition: $transition;
   }
 
+  @include media(sm) {
+    width: auto;
+    right: -$gutter * 45;
+  }
+
   &.-is-active {
     right: 0;
 
@@ -53,9 +54,14 @@
 
     margin: 0;
     list-style: none;
-    max-width: $gutter * 35;
+    max-width: 100%;
     height: 55vh;
     overflow-y: auto;
+
+    @include media(sm) {
+      width: auto;
+      max-width: $gutter * 35;
+    }
   }
 
   &__product {
